--- a/reactapp/.vscode/settings.json
+++ b/reactapp/.vscode/settings.json
@@ -1,5 +1,11 @@
 {
     "files.readonlyInclude": {
         "{**/.c4z/.extsrcs/*.PROTSYM.cbl,**/.c4z/.extsrcs/*.PROTSYM.listing}": true
-    }
+    },
+    "appService.zipIgnorePattern": [
+        "node_modules{,/**}",
+        ".vscode{,/**}"
+    ],
+    "appService.defaultWebAppToDeploy": "/subscriptions/980eef15-55d6-4597-81bb-685b82adb15c/resourceGroups/Wealth_group/providers/Microsoft.Web/sites/ermiyasg",
+    "appService.deploySubpath": "."
 }
