--- a/reactapp/package.json
+++ b/reactapp/package.json
@@ -1,4 +1,5 @@
 {
+  "homepage": "https://Ermiyas9.github.io/PersonalPortfolio",
   "name": "reactapp",
   "version": "0.1.0",
   "private": true,
@@ -25,6 +26,8 @@
   },
   "scripts": {
     "start": "react-scripts start",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
@@ -49,7 +52,6 @@
   },
   "devDependencies": {
     "@babel/plugin-proposal-private-property-in-object": "^7.21.11",
-    "gh-pages": "^6.3.0",
     "react-scripts": "^5.0.0"
   }
 }
