--- a/reactapp/package.json
+++ b/reactapp/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://Ermiyas9.github.io/PersonalPortfolio",
+  "homepage": "https://Ermiyas9.github.io/reactapp",
   "name": "reactapp",
   "version": "0.1.0",
   "private": true,
